<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RadioGroup
                android:id="@+id/rgTrimReturnMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTrimReturnType"
                android:layout_marginTop="-20dp"
                android:background="@drawable/layout_stroke"
                android:clickable="false"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <RadioButton
                    android:id="@+id/rbTrimReturnMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbTrimReturnMedia"/>

                <RadioButton
                    android:id="@+id/rbTrimReturnTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbTrimReturnTime"/>

                <RadioButton
                    android:id="@+id/rbTrimDynamicReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbTrimDynamicReturn"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tvTrimReturnType"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/trimReturnType"
                android:textColor="#ffffff"
                android:textSize="17dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RadioGroup
                android:id="@+id/rgTrimType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTrimType"
                android:layout_marginTop="-20dp"
                android:background="@drawable/layout_stroke"
                android:clickable="false"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <RadioButton
                    android:id="@+id/rbTrimTypeFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trimTypeFree"/>

                <RadioButton
                    android:id="@+id/rbTrimSingleFixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trimSingleFixed"/>

                <LinearLayout
                    android:id="@+id/llSingleFixedTrimTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/trimTimeText"
                        android:textColor="#ffffff"
                        android:textSize="17dp"/>

                    <EditText
                        android:id="@+id/etSingleFixedTrimTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/layout_stroke"
                        android:gravity="center"
                        android:hint="@string/hintSinglefixedTrimTime"
                        android:inputType="number"
                        android:padding="5dp"
                        android:textColor="#ffffff"/>
                </LinearLayout>

                <RadioButton
                    android:id="@+id/rbTrimDoubleFixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trimDoubleFixed"/>

                <LinearLayout
                    android:id="@+id/llTrimTime1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/timeTime1"
                        android:textColor="#ffffff"
                        android:textSize="17dp"/>

                    <EditText
                        android:id="@+id/etTrimTime1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/layout_stroke"
                        android:gravity="center"
                        android:hint="@string/hintTrimTime1"
                        android:inputType="number"
                        android:padding="5dp"
                        android:textColor="#ffffff"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTrimTime2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/trimTime2"
                        android:textColor="#ffffff"
                        android:textSize="17dp"/>

                    <EditText
                        android:id="@+id/etTrimTime2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/layout_stroke"
                        android:gravity="center"
                        android:hint="@string/hintTrimTime2"
                        android:inputType="number"
                        android:padding="5dp"
                        android:textColor="#ffffff"/>
                </LinearLayout>
            </RadioGroup>

            <TextView
                android:id="@+id/tvTrimType"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/trimTime"
                android:textColor="#ffffff"
                android:textSize="17dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RadioGroup
                android:id="@+id/rgTrimCropMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTrimCropMode"
                android:layout_marginTop="-20dp"
                android:background="@drawable/layout_stroke"
                android:clickable="false"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <RadioButton
                    android:id="@+id/rbTrimNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trimCropNormal"/>

                <RadioButton
                    android:id="@+id/rbTrim1x1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trimCrop1x1"/>

                <RadioButton
                    android:id="@+id/rbTrimNormalWithItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trimCropNormalWithItem"/>

                <RadioButton
                    android:id="@+id/rbTrim1x1WithItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trimCrop1x1WithItem"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tvTrimCropMode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/trimCrop"
                android:textColor="#ffffff"
                android:textSize="17dp"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>